...
      }
    },
    settings: {
      title: "Settings",
      preferences: "Preferences",
      darkMode: "Dark mode",
      language: "Language",
      account: "Account",
      changeUsername: "Change username",
      changePassword: "Change password",
      logout: "Log out",
      logoutConfirmationTitle: "Logout",
      logoutConfirmationMessage: "Are you sure you want to log out?",
...
      }
    },
    settings: {
      title: "Ustawienia",
      preferences: "Preferencje",
      darkMode: "Tryb Ciemny",
      language: "Język",
      account: "Konto",
      changeUsername: "Zmień nazwę użytkownika",
      changePassword: "Zmień hasło",
      logout: "Wyloguj",
      logoutConfirmationTitle: "Wylogowanie",
      logoutConfirmationMessage: "Czy na pewno chcesz się wylogować?",
...
